--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+# Core dependencies
 discord.py>=2.3.2
 python-dotenv>=1.0.1
 psycopg2-binary>=2.9.9
 Pillow>=10.2.0
 requests>=2.31.0
+
+# Testing dependencies
+pytest>=8.2.1
+pytest-asyncio>=0.26.0
+pytest-mock>=3.14.0
 
